Remove cred from .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 VITE_API_URL="http://localhost:3000/api/v1"
 
 API_URL="http://localhost:3000/api/v1"
-FIREBASE_API_KEY="AIzaSyAJNSt8D0Jgmrr0u-b_-5F7Ugzlgd91F68"
-AUTH_DOMAIN="code-test-b70fc.firebaseapp.com"
-PROJECT_ID="code-test-b70fc"
-MSG_SENDER_ID="59760102965"
-APP_ID="1:59760102965:web:ff9995951da4aa8b27ab7c"
+FIREBASE_API_KEY=""
+AUTH_DOMAIN=""
+PROJECT_ID=""
+MSG_SENDER_ID=""
+APP_ID=""
